# loqa-expo-dsp

./: .eslintignore  .gitignore  CHANGELOG.md  README.md  expo-module.config.json  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: verify-native.yml
__tests__/: analyzeSpectrum.test.ts  computeFFT.test.ts  detectPitch.test.ts  extractFormants.test.ts  validation.test.ts
android/: build.gradle
docs/: API.md  EPIC_BREAKDOWN.md  INTEGRATION_GUIDE.md  architecture.md  bmm-workflow-status.yaml  epics.md  prd.md  product-brief-loqa-audio-dsp-2025-11-20.md
example/: App.tsx  app.json  package.json
example/ios/: Podfile
ios/: LoqaAudioDsp.podspec  LoqaAudioDspModule.swift  LoqaExpoDspModule.swift
ios/RustFFI/: RustBridge.swift  (+1 more)
lib/: LoqaAudioDspModule.d.ts  analyzeSpectrum.d.ts  computeFFT.d.ts  detectPitch.d.ts  detectPitch.d.ts.map  detectPitch.js  detectPitch.js.map  errors.d.ts  extractFormants.d.ts  extractFormants.d.ts.map  extractFormants.js  extractFormants.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  types.d.ts  types.d.ts.map  types.js.map  utils.d.ts  validation.d.ts  voiceAnalyzer.d.ts  voiceAnalyzer.d.ts.map  voiceAnalyzer.js  voiceAnalyzer.js.map
rust/: Cargo.toml  README.md  build-android.sh  build-ios.sh
rust/.cargo/: config.toml
rust/src/: lib.rs
scripts/: check-swift-types.sh  swift-compile-check.sh  verify-android-symbols.sh  verify-ios-symbols.sh
src/: LoqaAudioDspModule.ts  detectPitch.ts  errors.ts  extractFormants.ts  index.ts  types.ts  utils.ts  validation.ts  voiceAnalyzer.ts
(+84 files in other folders)
