[package]
name = "loqa-expo-dsp-wrapper"
version = "0.2.0"
edition = "2021"

[lib]
name = "loqa_voice_dsp"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# loqa-voice-dsp dependency declaration (AC1 requirement)
# Core DSP library for voice analysis (pitch, formants, spectral features)
loqa-voice-dsp = "0.2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
